# fable-tlc-muscle-editor

./: .gitignore  build.py  muscle_parser.py  pyproject.toml  script.py
bncfg_examples/: hero_strong.bncfg
body_changer/: config_manager.py  muscle.lark  muscle_changer.py  muscle_config.py  muscle_parser.py  muscle_processer.py  muscle_utils.py
body_changer/ui/: editor.py  main_window.py  setup_editor.py  setup_main_window.py
examples/: hero_strong.bncfg
qt_ui/: editor.ui  main_window.ui
tests/: test_parser.py
