[tool.poetry]
name = "fable-tlc-muscle-editor"
version = "0.1.0"
description = ""
authors = ["CapBlood <stalker.anonim@mail.ru>"]

[tool.poetry.dependencies]
python = "^3.8"
fs = "^2.4.16"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
