[tool.poetry]
name = "fable-tlc-muscle-editor"
version = "0.1.0"
description = ""
authors = ["CapBlood <stalker.anonim@mail.ru>"]

[tool.poetry.dependencies]
python = ">=3.8, <=3.10"
fs = "^2.4.16"
ply = "^3.11"
lark = "^1.1.5"
numpy = "^1.24.1"
PySide6 = "^6.4.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
